[metadata]
name = chemdraw
version = 0.0.4
description = Drawing molecules
long_description = file: README.md
long_description_content_type = text/markdown
author = Dylan Walsh
url = https://github.com/dylanwal/chemdraw
license = BSD
license_files = LICENSE.txt
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.10
zip_safe = no
include_package_data = true
install_requires =
    numpy>=1.23.1
    plotly>=5.9.0
    kaleido>=0.1.0
    rdkit>=2022.3.4
    Pillow>=9.2.0
    scikit-learn>=1.1.1
